--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,19 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-  "keywords": ["meditrack", "api", "mysql", "sse"],
+  "keywords": [
+    "meditrack",
+    "api",
+    "mysql",
+    "sse"
+  ],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mysql2": "^3.6.0",
-    "cors": "^2.8.5"
+    "multer": "^2.0.2",
+    "mysql2": "^3.6.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
